Compiler/tests/bad/if3.nx
type t = [0 .. 10];

type a : array t of t;
type v : a filled by 3;

if(a)
{
    print(42);
}